grafana-tempo/istio/ngsa-memory/ngsa-memory.yaml
##################################################################################################
# Details service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: ngsa
  labels:
    app: ngsa
    service: ngsa
spec:
  ports:
  - port: 8080
    name: http
    nodePort: 30080
  type: NodePort # For external access (k3d, kind)
  selector:
    app: ngsa
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngsa
  labels:
    app: ngsa
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngsa
      version: v1
  template:
    metadata:
      labels:
        app: ngsa
        version: v1
    spec:
      serviceAccountName: ngsa
      containers:
      - name: ngsa
        image: k3d-registry.localhost:5000/ngsa-app:local
        resources:
          limits:
            cpu: "500m"
        args:
          - --in-memory
          - --prometheus
          - --url-prefix
          - /memory
          - --log-level
          - Warning
          - --request-log-level
          - Information
          - --zone
          - dev
          - --region
          - dev
          - --use-istio-trace-id
        imagePullPolicy: Always
        ports:
        - containerPort: 8080 
        securityContext:
          runAsUser: 1000
